# mushroom

./: .gitignore  Makefile  Makefile.am  Makefile.bak  README.md  TODO  autogen.sh  base.h  cb.c  cb.h  config  config.c  config.h  configure.in  conn.c  conn.h  console.c  console.h  debug.c  debug.h  iniconfig.c  iniconfig.h  license  limits  log.c  log.h  main.c  mr.ini  mrconsole.c  mrsh.h  mrshd  mrtp.h  mushroom.db  queue.c  queue.h  rdata.h  room.c  room.h  serial.c  serial.h  (+4 more)
.deps/: cb.Po  debug.Po  dictionary.Po  iniconfig.Po  iniparser.Po  local_queue.Po  log.Po  main.Po  message_header.pb-c.Po  posix_mq_queue.Po  protobuf-c.Po  room.Po  serial.Po  service.pb-c.Po  socket_client.Po  sqlite3.Po  util.Po
3rd/sqlite3/: sqlite3
proto/: message_header.pb-c.c  message_header.pb-c.h  message_header.proto  service.proto
protocol/: service.pb-c.c  service.pb-c.h
sql/: room.sql  sensor.sql
sqlite3/: Makefile
sqlite3/sql/: controller.sql
test/: Makefile  int24_codec.c  posix_mq.c  test.c  test_hexdump.c  test_localtime.c  test_server.c  test_timer_SIGEV_THREAD.c
tests/: test.c
